# anycowork

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  eslint.config.js  index.html  jest.e2e.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite-env.d.ts  vite.config.ts
.claude/: settings.local.json
anyagents/: Cargo.toml
anyagents/prompts/: planning_agent.j2  tool_use_system.j2
anyagents/src/: database.rs  events.rs  lib.rs  schema.rs
anyagents/src/agents/: coordinator.rs  mod.rs  optimizations.rs  planner.rs  router.rs  simple_chat.rs  skill_tests.rs  tests.rs  workflow_tests.rs
anyagents/src/llm/: mod.rs
anyagents/src/mcp/: mod.rs  types.rs
anyagents/src/models/: agent.rs  execution.rs  mail.rs  mcp_server.rs  mod.rs  settings.rs  telegram.rs
anyagents/src/permissions/: mod.rs  scope.rs
anyagents/src/skills/: docker.rs  parser.rs  tool.rs
anyagents/src/snapshots/: mod.rs
anyagents/src/tools/: bash.rs  contacts.rs  email.rs  filesystem.rs  mail_reader.rs  mod.rs  office.rs  search.rs  transcribe.rs  workflow_tests.rs
components/: ConnectionStatus.tsx  CreateDatabaseDialog.tsx  CreateTaskDialog.tsx  KeyValueEditor.tsx  ProviderSelect.tsx  StringListEditor.tsx  blob-upload-demo.tsx  block-blob-manager.tsx  cover.tsx  gradient-selector.tsx  icon-picker.tsx  mode-toggle.tsx  search-command.tsx  single-image-dropzone.tsx  spinner.tsx  toolbar.tsx  video-file-renderer.tsx
crates/anycowork-core/: Cargo.toml
crates/anycowork-core/src/: config.rs  lib.rs
crates/anycowork-core/src/agent/: config.rs  coordinator.rs  hook.rs  mod.rs
crates/anycowork-core/src/events/: channel.rs  mod.rs  types.rs
crates/anycowork-core/src/permissions/: handler.rs  manager.rs  mod.rs  scope.rs  types.rs
crates/anycowork-core/src/sandbox/: docker.rs  mod.rs  native.rs  traits.rs
crates/anycowork-core/src/skills/: loader.rs  mod.rs  parser.rs  tool.rs  types.rs
crates/anycowork-core/src/tools/: bash.rs  error.rs  filesystem.rs  mod.rs  office.rs  search.rs  traits.rs
crates/anycowork-tauri/: Cargo.toml
crates/anycowork-tauri/src/: events.rs  lib.rs  permissions.rs
docs/: agent-best-practices.md  architecture.md  build.md  design.md  ui-design.md  vision.md
examples/: multi_agent_example.rs
hooks/: useAgents.ts  useBlockBlobs.ts  useCoverImage.tsx  useDocuments.ts  useOrigin.tsx  (+7 more)
src-tauri/: Cargo.toml  out.docx  prompt_user_email.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: gemini_handshake_test.rs  gemini_live_test.rs  list_models.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/2024-01-01-000000_create_agents/: down.sql  up.sql
src-tauri/migrations/2024-01-02-000000_create_telegram_configs/: down.sql  up.sql
src-tauri/migrations/2024-01-03-000000_create_pages_and_blocks/: down.sql  up.sql
src-tauri/migrations/2024-01-04-000000_extend_sessions/: down.sql  up.sql
src-tauri/migrations/2024-01-05-000000_create_agent_skills/: down.sql  up.sql
src-tauri/migrations/2024-01-06-000000_create_knowledge_base/: down.sql  up.sql
src-tauri/migrations/2024-01-07-000000_create_search_system/: down.sql  up.sql
src-tauri/migrations/2026-01-21-000000_fix_database_schema/: down.sql  up.sql
src-tauri/migrations/2026-01-21-000001_drop_unused_tables/: down.sql  up.sql
src-tauri/migrations/2026-01-31-000000_enhance_skills_system/: down.sql  up.sql
src-tauri/migrations/2026-02-01-000000_create_mcp_servers/: up.sql
src-tauri/migrations/2026-02-01-000001_add_execution_mode_to_skills/: down.sql  up.sql
src-tauri/migrations/2026-02-09-123456_create_tasks/: up.sql
src-tauri/migrations/2026-02-10-000000_add_avatar_to_agents/: down.sql
src-tauri/migrations/2026-02-10-100000_create_mail_tables/: down.sql  up.sql
src-tauri/migrations/2026-02-12-000000_create_settings_table/: up.sql
src-tauri/prompts/: tool_use_system.j2
src-tauri/skills/algorithmic-art/: SKILL.md
src-tauri/skills/canvas-design/: SKILL.md
src-tauri/skills/data-analysis/: SKILL.md
src-tauri/skills/doc-coauthoring/: SKILL.md
src-tauri/skills/docx/: SKILL.md
src-tauri/skills/git-ops/: SKILL.md
src-tauri/skills/internal-comms/: SKILL.md
src-tauri/skills/mcp-builder/scripts/: evaluation.py
src-tauri/skills/pdf/: LICENSE.txt  SKILL.md
src-tauri/skills/pptx/: SKILL.md
src-tauri/skills/skill-creator/: SKILL.md
src-tauri/skills/skill-creator/references/: workflows.md
src-tauri/skills/slack-gif-creator/: SKILL.md
src-tauri/skills/theme-factory/: SKILL.md
src-tauri/skills/web-artifacts-builder/: SKILL.md
src-tauri/skills/web-artifacts-builder/scripts/: bundle-artifact.sh
src-tauri/skills/xlsx/: SKILL.md
src-tauri/src/: database.rs  events.rs  lib.rs  main.rs  schema.rs  telegram.rs  voice_call.rs
src-tauri/src/agents/: coordinator.rs  mod.rs  optimizations.rs  planner.rs  processor.rs  router.rs  simple_chat.rs  skill_tests.rs  tests.rs  workflow_tests.rs
src-tauri/src/commands/: agents.rs  mail.rs  mcp.rs  mod.rs  pages.rs  sessions.rs  settings.rs  skills.rs  tasks.rs  telegram.rs  transcribe.rs  voice.rs  window.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/models/: agent.rs  execution.rs  execution_state.rs  mod.rs  page.rs  session.rs  skill.rs  tasks.rs
src-tauri/src/permissions/: mod.rs
src-tauri/src/skills/: loader.rs  mod.rs  tool.rs
src-tauri/src/snapshots/: mod.rs
src-tauri/src/tools/: adapter.rs  bash.rs  filesystem.rs  mod.rs  office.rs  search.rs  workflow_tests.rs
src-tauri/tests/: README.md  content_skills_tests.rs  docker_execution_e2e.rs  docker_verification_test.rs  e2e_agent_mail_integration.rs  e2e_agent_tool_execution.rs  e2e_chat.rs  e2e_chat_context.rs  e2e_complex_workflows.rs  e2e_contacts_and_internal_mail.rs  e2e_mail.rs  e2e_mail_context.rs  e2e_mail_tool_prevention.rs  e2e_office_workflows_advanced.rs  e2e_office_workflows_basic.rs  e2e_office_workflows_complex.rs  e2e_office_workflows_coordination.rs  e2e_office_workflows_tools.rs  e2e_skill_usage.rs  e2e_tool_calling.rs  e2e_transcribe.rs  office_test_helpers.rs  skill_execution_tests.rs
(+152 files in other folders)
