[package]
name = "anyagents"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = "0.29.0"
diesel = { version = "2.2.0", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
chrono = { version = "0.4.43", features = ["serde"] }
dashmap = "6.1.0"
tokio-stream = "0.1.18"
log = "0.4"
async-trait = "0.1"
futures = "0.3"
async-openai = "0.28.0"
sha2 = "0.10.9"
walkdir = "2.5.0"
hex = "0.4.3"
calamine = "0.26.1"
docx-rs = "0.4.5"
pdf-extract = "0.7.4"
csv = "1.3.0"
jsonschema = "0.19.0"
minijinja = { version = "2.14.0", features = ["loader"] }
schemars = "0.8"
reqwest = { version = "0.11", features = ["json"] }
zip = "2.2"
tempfile = "3.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
transcribe-rs = { path = "../thirdparty/transcribe-rs", features = ["parakeet"] }
dirs = "5.0"
