[package]
name = "anycowork"
version.workspace = true
description = "AnyCowork Tauri App"
authors.workspace = true
edition.workspace = true
rust-version = "1.77.2"

[lib]
name = "anycowork"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
# Internal crates
anycowork-core = { path = "../crates/anycowork-core" }
anycowork-tauri = { path = "../crates/anycowork-tauri" }

# Tauri
tauri = { version = "2.0.0", features = ["test"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"

# Serialization (workspace)
serde = { workspace = true }
serde_json = { workspace = true }

# Async (workspace)
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# AI (workspace)
rig-core = { workspace = true }

# Utilities (workspace)
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true }

# Schema/Validation (workspace)
schemars = { workspace = true }
jsonschema = { workspace = true }

# Templating (workspace)
minijinja = { workspace = true }

# File processing (workspace)
walkdir = { workspace = true }
zip = { workspace = true }
tempfile = { workspace = true }

# HTTP client (workspace)
reqwest = { workspace = true }

# Document processing (workspace)
calamine = { workspace = true }
docx-rs = { workspace = true }
pdf-extract = { workspace = true }
csv = { workspace = true }

# Crypto (workspace)
sha2 = { workspace = true }
hex = { workspace = true }

# Database (local)
diesel = { version = "2.2.0", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2.2.0"

# Environment
dotenvy = "0.15"
env_logger = "0.11"

# Telegram
teloxide = { version = "0.13", features = ["macros"] }

# OpenAI (additional)
async-openai = "0.28.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = { workspace = true }
